feat: add dotenv support and S3 image downloading functionality

--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -2,6 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "import os\n",
+    "import boto3\n",
+    "\n",
+    "bucket = 'cilantro-vs-perejil'\n",
+    "s3 = boto3.client(\n",
+    "    's3',\n",
+    "    aws_access_key_id=os.environ['AWS_ACCESS_KEY_ID'],\n",
+    "    aws_secret_access_key=os.environ['AWS_SECRET_ACCESS_KEY'],\n",
+    "    region_name=os.environ.get('AWS_DEFAULT_REGION', 'us-east-1')\n",
+    ")\n",
+    "\n",
+    "def download_images_from_s3(prefix, local_folder):\n",
+    "    paginator = s3.get_paginator('list_objects_v2')\n",
+    "    os.makedirs(local_folder, exist_ok=True)\n",
+    "    for page in paginator.paginate(Bucket=bucket, Prefix=prefix):\n",
+    "        for obj in page.get('Contents', []):\n",
+    "            key = obj['Key']\n",
+    "            if not key.endswith('/'):\n",
+    "                local_path = os.path.join(local_folder, os.path.basename(key))\n",
+    "                if not os.path.exists(local_path):  # Skip if already exists\n",
+    "                    print(f\"Downloading {key} -> {local_path}\")\n",
+    "                    s3.download_file(bucket, key, local_path)\n",
+    "\n",
+    "# Example usage:\n",
+    "download_images_from_s3('dataset/local/cilantro/train/', 'dataset/train/cilantro')\n",
+    "download_images_from_s3('dataset/local/perejil/train/', 'dataset/train/perejil')\n",
+    "download_images_from_s3('dataset/local/cilantro/validation/', 'dataset/validation/cilantro')\n",
+    "download_images_from_s3('dataset/local/perejil/validation/', 'dataset/validation/perejil')\n",
+    "download_images_from_s3('dataset/local/cilantro/test/', 'dataset/test/cilantro')\n",
+    "download_images_from_s3('dataset/local/perejil/test/', 'dataset/test/perejil')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
